@@ -1,0 +1,1 @@
+Function to read and write the 'Stata' file format.
