@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/07/31 13:53:41 brook Exp $
+
+SHA1 (R/readstata13_0.9.2.tar.gz) = f87e7e136d0707d4720b00acd2a81c0e071ff65a
+RMD160 (R/readstata13_0.9.2.tar.gz) = 15d371f1c7170cf1aa1df2f8f1f31dec8707d11b
+SHA512 (R/readstata13_0.9.2.tar.gz) = c2e9ba9fa013f9976ef2d3e6d3e4fe8429fc4b8dd0ad420061bf5738de2dbfc2cfb039f7a55f8d978c51ca17ae9d9dd473cb6d77947057966f40c3ca48a86ca6
+Size (R/readstata13_0.9.2.tar.gz) = 61394 bytes
